# meteoride

./: .gitignore  API.md  DEPLOYMENT.md  README.md  SUMMARY.md  docker-compose.yml
.github/workflows/: backend.yml  ci.yml  mobile.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/config/: default.yaml
backend/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  redis.yaml  secret.yaml
backend/src/: cache.rs  config.rs  handlers.rs  main.rs  models.rs  weather.rs
mobile/: .gitignore  pubspec.yaml
mobile/android/app/src/main/: AndroidManifest.xml
mobile/lib/: main.dart
mobile/lib/models/: weather_models.dart
mobile/lib/screens/: home_screen.dart  settings_screen.dart
mobile/lib/services/: notification_service.dart  storage_service.dart  weather_service.dart
mobile/test/: models_test.dart
scripts/: deploy.sh
